--- a/src/main/resources/languages/EN_US.yml
+++ b/src/main/resources/languages/EN_US.yml
@@ -44,16 +44,26 @@ help-command-display: "<dark_gray> - </dark_gray><bold> <aqua>%command%</aqua></
 
 no-plugins-installed: "<prefix><gray>You have no plugins installed or recognized by PluginPortal"
 listing-all-plugins: "<prefix><gray>Listing all plugins..."
-installed-plugin: "<green>+</green> <aqua>%name%"
+installed-plugin: "<green>+</green> <aqua>**{0}**"
 
 # ---------------- Request ----------------- #
 
 plugin-requested: "<prefix><gray>Plugin has been requested"
 plugin-is-supported: "<prefix><gray>Plugin is supported by PluginPortal"
 
-# ----------------- Update ----------------- #
+# ---------------- UpdateAll --------------- #
 
 no-plugin-requires-an-update: "<prefix><gray>No plugins require an update!"
 updating-plugins: "<prefix><gray>Updating plugins..."
 plugin-updated: "<prefix><aqua>%plugin%</aqua><gray> has been updated!"
 plugin-not-updated: "<prefix><aqua>**{0}**</aqua> has not been updated due to an error. Please make sure the plugin has been enabled."
+
+# ----------------- Update ----------------- #
+
+plugin-is-up-to-date: "<prefix><aqua>**{0}** <gray>is already up to date."
+listing-all-outdated-plugins: "<prefix><gray>Listing all outdated plugins..."
+
+
+
+
+
