--- a/src/main/resources/languages/EN_US.yml
+++ b/src/main/resources/languages/EN_US.yml
@@ -7,7 +7,7 @@ prefix: "<bold><gray>[<aqua>PP</aqua>]</gray> <dark_gray>></bold> "
 # --------------- Messages --------------- #
 
 console-plugin-portal-outdated: "<prefix><gray>This plugin is outdated! Please update to the latest version."
-player-plugin-portal-outdated: "<prefix><gray>Plugin Portal needs to be updated. Please download the latest version from: <aqua><bold><click:open_url:'https://pluginportal.link'><hover:show_text:'Download PluginPortal from SpigotMC'></hover>[CLICK HERE]</click>"
+player-plugin-portal-outdated: "<prefix><gray>Plugin Portal needs to be updated. Please download the latest version from: <aqua><bold><click:open_url:'https://pluginportal.link'><hover:show_text:'<aqua>Download PluginPortal from SpigotMC'>[CLICK HERE]</hover></click>"
 player-manually-removed-plugins: "<prefix><gray>We noticed you manually removed <red>%pluginsString%</red>, we have removed them from PluginPortal to prevent issues."
 
 # --------------- Commands --------------- #
@@ -36,8 +36,8 @@ service-not-supported: "<prefix><gray>This plugin is not available on <red>**{0}
 
 # ----------------- Help ------------------ #
 
-blank-strike-through-with-watermark: "<prefix><dark_gray><st>                        <gray> [<aqua><bold>PP</bold>] </gray><dark_gray>                        "
-blank-strike-through: "<prefix><dark_gray><st>                                                      "
+blank-strike-through-with-watermark: "<dark_gray><st>                        <gray> [<aqua><bold>PP</bold>] </gray><dark_gray>                        "
+blank-strike-through: "<dark_gray><st>                                                      "
 help-command-display: "<dark_gray> - </dark_gray><bold> <aqua>%command%</aqua></bold><dark_gray>: </dark_gray><gray>%usage%</gray>"
 
 # ----------------- List ------------------ #
@@ -63,7 +63,9 @@ plugin-not-updated: "<prefix><aqua>**{0}**</aqua> has not been updated due to an
 plugin-is-up-to-date: "<prefix><aqua>**{0}** <gray>is already up to date."
 listing-all-outdated-plugins: "<prefix><gray>Listing all outdated plugins..."
 
+# ----------------- Preview ----------------- #
 
+preview-format-button: "<click:**{0}**><hover:show_text:'**{1}**'>**{2}**</hover></click>"
 
 
 
