--- a/src/main/resources/languages/EN_US.yml
+++ b/src/main/resources/languages/EN_US.yml
@@ -8,7 +8,7 @@ prefix: "<bold><gray>[<aqua>PP</aqua>]</gray> <dark_gray>></bold> "
 
 console-plugin-portal-outdated: "<prefix><gray>This plugin is outdated! Please update to the latest version."
 player-plugin-portal-outdated: "<prefix><gray>Plugin Portal needs to be updated. Please download the latest version from: <aqua><bold><click:open_url:'https://pluginportal.link'><hover:show_text:'<aqua>Download PluginPortal from SpigotMC'>[CLICK HERE]</hover></click>"
-player-manually-removed-plugins: "<prefix><gray>We noticed you manually removed <red>%pluginsString%</red>, we have removed them from PluginPortal to prevent issues."
+player-manually-removed-plugins: "<prefix><gray>We noticed you manually removed <red>**{0}**</red>, we have removed them from PluginPortal to prevent issues."
 
 # --------------- Commands --------------- #
 
@@ -20,16 +20,16 @@ no-download-found: "<prefix><red>No download URL has been found!"
 
 # ---------------- Delete ---------------- #
 
-plugin-not-installed: "<prefix><red>%plugin% not installed!"
-plugin-not-deleted: "<prefix><gray>Could not delete <red>%plugin%</red>! This may be due to the plugin not being enabled. Restart your server and try again."
-plugin-deleted: "<prefix><aqua>%plugin%</aqua><gray> has been deleted!"
+plugin-not-installed: "<prefix><red>**{0}**not installed!"
+plugin-not-deleted: "<prefix><gray>Could not delete <red>**{0}**</red>! This may be due to the plugin not being enabled. Restart your server and try again."
+plugin-deleted: "<prefix><aqua>**{0}**</aqua><gray> has been deleted!"
 
 # ---------------- Install ---------------- #
 
 plugin-already-installed: "<prefix><gray>Plugin already installed!"
 plugin-is-premium: "<prefix><red>PluginPortal may only download plugins which are free to install."
 plugin-is-being-installed: "<prefix><gray>Plugin is being installed, please wait..."
-plugin-has-been-installed: "<prefix><aqua>%plugin%</aqua><gray> has been installed!"
+plugin-has-been-installed: "<prefix><aqua>**{0}**</aqua><gray> has been installed!"
 plugin-attempted-enabling: "<prefix><gray>Plugin has attempted to start automatically, a restart may still be needed."
 restart-server-to-enable: "<prefix><gray>Please restart your server to enable the plugin."
 service-not-supported: "<prefix><gray>This plugin is not available on <red>**{0}**</red>. Please change the supported service via the config.yml, or purchase premium (Coming Soon)."
@@ -38,7 +38,7 @@ service-not-supported: "<prefix><gray>This plugin is not available on <red>**{0}
 
 blank-strike-through-with-watermark: "<dark_gray><st>                        <gray> [<aqua><bold>PP</bold>] </gray><dark_gray>                        "
 blank-strike-through: "<dark_gray><st>                                                      "
-help-command-display: "<dark_gray> - </dark_gray><bold> <aqua>%command%</aqua></bold><dark_gray>: </dark_gray><gray>%usage%</gray>"
+help-command-display: "<dark_gray> - </dark_gray><bold> <aqua>**{0}**</aqua></bold><dark_gray>: </dark_gray><gray>**{1}**</gray>"
 
 # ----------------- List ------------------ #
 
@@ -55,7 +55,7 @@ plugin-is-supported: "<prefix><gray>Plugin is supported by PluginPortal"
 
 no-plugin-requires-an-update: "<prefix><gray>No plugins require an update!"
 updating-plugins: "<prefix><gray>Updating plugins..."
-plugin-updated: "<prefix><aqua>%plugin%</aqua><gray> has been updated!"
+plugin-updated: "<prefix><aqua>**{0}**</aqua><gray> has been updated!"
 plugin-not-updated: "<prefix><aqua>**{0}**</aqua> has not been updated due to an error. Please make sure the plugin has been enabled."
 
 # ----------------- Update ----------------- #
@@ -65,7 +65,7 @@ listing-all-outdated-plugins: "<prefix><gray>Listing all outdated plugins..."
 
 # ----------------- Preview ----------------- #
 
-preview-format-button: "<click:**{0}**><hover:show_text:'**{1}**'>**{2}**</hover></click>"
-
+open-url-preview-format-button: "<click:open_url:**{0}**><hover:show_text:'**{1}**'>**{2}**</hover></click>"
+run-command-preview-format-button: "<click:run_command:**{0}**><hover:show_text:'**{1}**'>**{2}**</hover></click>"
 
 
