--- a/src/main/resources/languages/EN_US.yml
+++ b/src/main/resources/languages/EN_US.yml
@@ -36,7 +36,7 @@ service-not-supported: "<prefix><gray>This plugin is not available on <red>**{0}
 
 # ----------------- Help ------------------ #
 
-blank-strike-through-with-watermark: "<dark_gray><st>                        <gray> [<aqua><bold>PP</bold>] </gray><dark_gray>                        "
+blank-strike-through-with-watermark: "<dark_gray><st>                         </st><gray>[<aqua><bold>PP</bold></aqua>]</gray><dark_gray><st>                         "
 blank-strike-through: "<dark_gray><st>                                                      "
 help-command-display: "<dark_gray> - </dark_gray><bold> <aqua>**{0}**</aqua></bold><dark_gray>: </dark_gray><gray>**{1}**</gray>"
 
