--- a/src/main/resources/languages/VAL_ES.yml
+++ b/src/main/resources/languages/VAL_ES.yml
@@ -67,3 +67,6 @@ listing-all-outdated-plugins: "<prefix><gray>Llistant tots el plugins desactuali
 
 open-url-preview-format-button: "<click:open_url:**{0}**><hover:show_text:'**{1}**'>**{2}**</hover></click>"
 run-command-preview-format-button: "<click:run_command:**{0}**><hover:show_text:'**{1}**'>**{2}**</hover></click>"
+
+no-plugins-found: "No s'han trobat connectors"
+keep-typing: "Segueix escrivint..."
