--- a/src/main/resources/languages/VAL_ES.yml
+++ b/src/main/resources/languages/VAL_ES.yml
@@ -44,7 +44,7 @@ help-command-display: "<dark_gray> - </dark_gray><bold> <aqua>**{0}**</aqua></bo
 
 no-plugins-installed: "<prefix><gray>No tens plugins instal-lats o reconeguts per PluginPortal"
 listing-all-plugins: "<prefix><gray>Llistant tots el plugins..."
-installed-plugin: "<green>+</green> <aqua>**{0}**"
+installed-plugin: "<green>+</green> <gray>**{0}**"
 
 # ---------------- Request ----------------- #
 
